--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ sqlparse==0.5.2
 
 celery~=5.4.0
 pywebpush~=2.0.3
+
+django-celery-beat==2.7.0
+django-push-notifications==3.1.0
+firebase-admin==6.6.0
